--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
+astroid==2.3.2
 certifi==2019.9.11
 chardet==3.0.4
 dj-database-url==0.5.0
-Django==2.2.5
-django-computed-property==0.3.0
+Django==2.2.6
 django-heroku==0.3.1
 djangorestframework==3.10.3
-djangorestframework-csv==2.1.0
 gunicorn==19.9.0
 idna==2.8
-psycopg2-binary==2.8.3
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+psycopg2-binary==2.8.4
+PyJWT==1.7.1
+pylint==2.4.3
 python-dotenv==0.10.3
-pytz==2019.2
+pytz==2019.3
 requests==2.22.0
 six==1.12.0
 sqlparse==0.3.0
-unicodecsv==0.14.1
+typed-ast==1.4.0
 urllib3==1.25.6
 whitenoise==4.1.4
+wrapt==1.11.2
