Search controls and filters and paging working on the Results page but still cannot filter by calculated fields on the backend

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ requests = "*"
 gunicorn = "*"
 pyjwt = "*"
 django-cors-headers = "*"
+django-computed-property = "*"
 
 [requires]
 python_version = "3.7"
