--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-image": "^2.2.0",
+    "react-light-accordion": "^0.1.4",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
     "react-select-async-paginate": "^0.3.13",
