--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "webpack -p",
     "serve:backend": "python manage.py runserver 4000",
     "serve:frontend": "webpack-dev-server",
-    "seed": "python manage.py loaddata results/fixtures.json"
+    "seed": "python manage.py loaddata results/fixtures.json",
+    "postinstall": "yarn build"
+
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
