--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,62 @@
-asgiref==3.2.10
 astroid==2.3.2
-certifi==2020.6.20
+awscli==1.16.257
+awsebcli==3.15.3
+blessed==1.15.0
+botocore==1.12.247
+cached-property==1.5.1
+cachetools==3.1.1
+cement==2.8.2
+certifi==2019.6.16
 chardet==3.0.4
+colorama==0.3.9
 dj-database-url==0.5.0
-Django==3.1.1
-django-computed-property==0.3.0
-django-cors-headers==3.5.0
-django-filter==2.4.0
-django-heroku==0.3.1
-djangorestframework==3.11.1
-gunicorn==20.0.4
-idna==2.10
+Django==2.2.6
+django-filter==2.2.0
+docker==3.7.3
+docker-compose==1.23.2
+docker-pycreds==0.4.0
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.15.2
+future==0.16.0
+google-api-python-client==1.7.11
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.0
+gunicorn==19.9.0
+httplib2==0.13.1
+idna==2.7
 isort==4.3.21
-lazy-object-proxy==1.4.3
+jmespath==0.9.4
+jsonschema==2.6.0
+lazy-object-proxy==1.4.2
 mccabe==0.6.1
-psycopg2-binary==2.8.6
-PyJWT==1.7.1
+oauthlib==3.1.0
+pathspec==0.5.9
+pipenv==2018.11.26
+psycopg2==2.8.6
+pyasn1==0.4.6
+pyasn1-modules==0.2.6
 pylint==2.4.3
-python-dotenv==0.14.0
-pytz==2020.1
-requests==2.24.0
-six==1.15.0
-sqlparse==0.3.1
+python-dateutil==2.8.0
+python-dotenv==0.10.3
+pytz==2019.3
+PyYAML==3.13
+requests==2.20.1
+requests-oauthlib==1.2.0
+rsa==3.4.2
+s3transfer==0.2.1
+semantic-version==2.5.0
+six==1.12.0
+sqlparse==0.3.0
+termcolor==1.1.0
+texttable==0.9.1
 typed-ast==1.4.0
-urllib3==1.25.10
+uritemplate==3.0.0
+urllib3==1.24.3
+virtualenv==16.7.5
+virtualenv-clone==0.5.3
+wcwidth==0.1.7
+websocket-client==0.56.0
 whitenoise==5.2.0
 wrapt==1.11.2
