--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,20 @@
-astroid==2.3.2
-awscli==1.16.257
-awsebcli==3.15.3
-blessed==1.15.0
-botocore==1.12.247
-cached-property==1.5.1
-cachetools==3.1.1
-cement==2.8.2
-certifi==2019.6.16
-chardet==3.0.4
-colorama==0.3.9
-dj-database-url==0.5.0
-Django==2.2.6
-django-filter==2.2.0
-docker==3.7.3
-docker-compose==1.23.2
-docker-pycreds==0.4.0
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.15.2
-future==0.16.0
-google-api-python-client==1.7.11
-google-auth==1.6.3
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.4.0
-gunicorn==19.9.0
-httplib2==0.13.1
-idna==2.7
-isort==4.3.21
-jmespath==0.9.4
-jsonschema==2.6.0
-lazy-object-proxy==1.4.2
-mccabe==0.6.1
-oauthlib==3.1.0
-pathspec==0.5.9
-pipenv==2018.11.26
-psycopg2==2.8.6
-pyasn1==0.4.6
-pyasn1-modules==0.2.6
-pylint==2.4.3
-python-dateutil==2.8.0
-python-dotenv==0.10.3
-pytz==2019.3
-PyYAML==3.13
-requests==2.20.1
-requests-oauthlib==1.2.0
-rsa==3.4.2
-s3transfer==0.2.1
-semantic-version==2.5.0
-six==1.12.0
-sqlparse==0.3.0
-termcolor==1.1.0
-texttable==0.9.1
-typed-ast==1.4.0
-uritemplate==3.0.0
-urllib3==1.24.3
-virtualenv==16.7.5
-virtualenv-clone==0.5.3
-wcwidth==0.1.7
-websocket-client==0.56.0
-whitenoise==5.2.0
-wrapt==1.11.2
+asgiref==3.5.2
+certifi==2022.9.14
+charset-normalizer==2.1.1
+dj-database-url==1.0.0
+Django==3.2.15
+django-cors-headers==3.13.0
+django-filter==22.1
+django-heroku==0.3.1
+djangorestframework==3.13.1
+gunicorn==20.1.0
+idna==3.4
+psycopg2-binary==2.9.3
+PyJWT==2.5.0
+python-dotenv==0.21.0
+pytz==2022.2.1
+requests==2.28.1
+six==1.16.0
+sqlparse==0.4.2
+urllib3==1.26.12
+whitenoise==6.2.0
