--- a/Pipfile
+++ b/Pipfile
@@ -1,24 +1,31 @@
 [[source]]
-name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-
-[dev-packages]
-pylint = "*"
+name = "pypi"
 
 [packages]
-django = "*"
-djangorestframework = "*"
-psycopg2-binary = "*"
-django-heroku = "*"
-python-dotenv = "*"
-requests = "*"
-gunicorn = "*"
-pyjwt = "*"
-django-cors-headers = "*"
-django-computed-property = "*"
-django-filter = "*"
-psycopg2 = "*"
+asgiref = "==3.5.2"
+certifi = "==2022.9.14"
+charset-normalizer = "==2.1.1"
+dj-database-url = "==1.0.0"
+django = "==3.2.15"
+django-cors-headers = "==3.13.0"
+django-filter = "==22.1"
+django-heroku = "==0.3.1"
+djangorestframework = "==3.13.1"
+gunicorn = "==20.1.0"
+idna = "==3.4"
+psycopg2-binary = "==2.9.3"
+pyjwt = "==2.5.0"
+python-dotenv = "==0.21.0"
+pytz = "==2022.2.1"
+requests = "==2.28.1"
+six = "==1.16.0"
+sqlparse = "==0.4.2"
+urllib3 = "==1.26.12"
+whitenoise = "==6.2.0"
 
 [requires]
-python_version = "3.7"
+python_version = "3.10"
+
+[dev-packages]
