--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "results",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index",
+  "types": "dist/index",
   "license": "MIT",
   "scripts": {
-    "build": "webpack -p",
+    "build": "webpack --mode production",
     "serve:backend": "python manage.py runserver 4000",
     "serve:frontend": "webpack-dev-server",
     "seed": "python manage.py loaddata results/fixtures.json",
     "postinstall": "yarn build"
-
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
@@ -20,36 +20,50 @@
     "@fortawesome/fontawesome-free": "^5.10.2",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
-    "bulma": "^0.7.5",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "buffer": "^6.0.3",
+    "bulma": "^1.0.2",
+    "copy-webpack-plugin": "^12.0.2",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-image": "^2.2.0",
+    "process": "^0.11.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-image": "^4.1.0",
     "react-light-accordion": "^0.1.4",
     "react-router-dom": "^5.0.1",
-    "react-select": "^3.0.4",
-    "react-select-async-paginate": "^0.3.13",
-    "react-toastify": "^5.4.0",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7"
+    "react-select": "^5.8.0",
+    "react-select-async-paginate": "^0.7.5",
+    "react-toastify": "^10.0.5",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
+    "stream": "^0.0.3",
+    "stream-browserify": "^3.0.0",
+    "style-loader": "^4.0.0",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "@types/copy-webpack-plugin": "^10.1.0",
+    "@types/node": "^22.1.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.3.0",
     "eslint-plugin-react": "^7.14.3",
-    "webpack-dev-server": "^3.8.0"
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "engines": {
-    "node": "12.11.1",
+    "node": "v18.12.0",
     "python": "3.7.5"
   }
 }
