--- a/.eslintrc
+++ b/.eslintrc
@@ -25,8 +25,8 @@
     "no-console": "off",
     "no-fallthrough": "warn",
     "prefer-const": "error",
-    "quotes": [ "error", "single" ],
-    "semi": [ "error", "never" ],
+    "quotes": [ "error", "double" ],
+    // "semi": [ "error", "never" ],
     "react/prop-types": [ 0 ]
   }
 }
