--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "dist/index",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --mode development",
     "serve:backend": "python manage.py runserver 4000",
     "serve:frontend": "webpack-dev-server",
     "seed": "python manage.py loaddata results/fixtures.json",
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.6.0",
     "@fortawesome/fontawesome-free": "^5.10.2",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "buffer": "^6.0.3",
@@ -25,6 +26,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^7.1.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
@@ -34,8 +36,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image": "^4.1.0",
-    "react-light-accordion": "^0.1.4",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.3.3",
     "react-select": "^5.8.0",
     "react-select-async-paginate": "^0.7.5",
     "react-toastify": "^10.0.5",
