--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.6.0",
     "@fortawesome/fontawesome-free": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
@@ -28,6 +29,7 @@
     "css-loader": "^7.1.2",
     "eslint-plugin-prettier": "^5.2.1",
     "file-loader": "^6.2.0",
+    "framer-motion": "^11.3.30",
     "html-webpack-plugin": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.24.0",
