--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "prettier": "^3.3.3",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -58,7 +59,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.3.0",
+    "eslint": "^9.11.0",
     "eslint-plugin-react": "^7.14.3",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
@@ -66,7 +67,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "engines": {
-    "node": "v18.12.0",
+    "node": "v18.18.0",
     "python": "3.7.5"
   }
 }
