--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "webpack --mode production",
     "serve:backend": "python manage.py runserver 4000",
     "serve:frontend": "webpack serve --mode development",
-    "seed": "python manage.py loaddata results/fixtures.json",
-    "postinstall": "yarn build"
+    "seed": "python manage.py loaddata results/fixtures.json"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
@@ -17,8 +16,9 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.6.0",
-    "@fortawesome/fontawesome-free": "^5.10.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "@tanstack/react-table": "^8.21.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
@@ -60,7 +60,8 @@
     "@types/react-dom": "^18.3.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^9.11.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
