--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint": "^9.11.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "prettier-plugin-css-order": "^2.1.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
